src/libnorn/norn_session.h

/* Opaque handles */
typedef struct norn_session norn_session_t;
typedef struct norn_stream norn_stream_t;
/**
 * @brief Stream state
 */
typedef enum {
    NORN_STREAM_READY,      /**< Stream is ready for I/O */
    NORN_STREAM_CLOSED,     /**< Stream closed locally */
    NORN_STREAM_RESET,      /**< Stream reset by peer */
} norn_stream_state_t;
/**
 * @brief Session state
 */
typedef enum {
    NORN_SESSION_RESOLVING,    /**< DHT lookup in progress */
    NORN_SESSION_CONNECTING,   /**< Handshake in progress */
    NORN_SESSION_ESTABLISHED,  /**< Ready for streams */
    NORN_SESSION_CLOSING,      /**< Close in progress */
    NORN_SESSION_CLOSED        /**< Session terminated */
} norn_session_state_t;
/**
 * @brief Direct connection endpoint (for testing)
 */
typedef struct {
    uint32_t ip;                     /**< IPv4 address (network byte order) */
    uint16_t port;                   /**< UDP port (network byte order) */
} norn_direct_endpoint_t;
/**
 * @brief Callback for session state changes
 *
 * @param session Session handle
 * @param state New state
 * @param user_data User-provided pointer from norn_dial_async/norn_accept_async
 */
typedef void (*norn_session_callback_t)(norn_session_t *session,
                                        norn_session_state_t state,
                                        void *user_data);
/**
 * @brief Callback for inbound sessions
 *
 * @param session New session handle
 * @param user_data User-provided pointer from norn_listen_async
 */
typedef void (*norn_accept_callback_t)(norn_session_t *session, void *user_data);
/**
 * @brief Callback for stream events
 *
 * @param stream Stream handle
 * @param state New stream state
 * @param user_data User-provided pointer from norn_stream_open_async
 */
typedef void (*norn_stream_callback_t)(norn_stream_t *stream,
                                       norn_stream_state_t state,
                                       void *user_data);
/**
 * @brief Dial a peer by direct endpoint (async, for testing)
 *
 * Connects directly to known IP:port without DHT resolution.
 *
 * @param client Client handle
 * @param endpoint Direct endpoint (IP + port)
 * @param pubkey Peer's public key (for handshake)
 * @param suite Crypto suite (NULL for default)
 * @param callback State change callback
 * @param user_data User data passed to callback
 * @return 0 on success, -1 on error
 *
 * @note Non-blocking: Returns immediately
 * @note For testing/private networks only
 */
int norn_dial_direct_async(norn_client_t *client,
                           const norn_direct_endpoint_t *endpoint,
                           const unsigned char *pubkey,
                           const norn_crypto_suite_t *suite,
                           norn_session_callback_t callback,
                           void *user_data);
/**
 * @brief Listen for inbound connections (async)
 *
 * Binds to port and invokes callback for each new session.
 *
 * @param client Client handle
 * @param port Port to listen on (network byte order, 0 for auto)
 * @param suite Crypto suite (NULL for default)
 * @param callback Inbound session callback
 * @param user_data User data passed to callback
 * @return 0 on success, -1 on error
 *
 * @note Non-blocking: Returns immediately
 * @note Callback is invoked from norn_tick()
 */
int norn_listen_async(norn_client_t *client,
                      uint16_t port,
                      const norn_crypto_suite_t *suite,
                      norn_accept_callback_t callback,
                      void *user_data);
/* === Event Loop Integration === */

/**
 * @brief Process all pending events (non-blocking)
 *
 * Must be called regularly (e.g., every 100ms) to process:
 * - Incoming packets
 * - Timeout handling
 * - Session state transitions
 * - Callback invocations
 *
 * @return Number of events processed, or -1 on error
 *
 * @note Non-blocking: Returns quickly even if no events
 * @note NULL-safe: Returns -1 if client is NULL
 *
 * @code
 * while (running) {
 *     norn_tick(client);
 *     usleep(100000); // 100ms
 * }
 * @endcode
 */
int norn_tick(norn_client_t *client);
/**
 * @brief Get file descriptor for poll()/select()
 *
 * Returns the main DHT socket FD. Use with select()/poll()/epoll/kqueue
 * to wait for events efficiently.
 *
 * @return Socket FD, or -1 on error
 *
 * @note Use for external event loop integration
 * @code
 * int fd = norn_get_fd(client);
 * while (running) {
 *     fd_set read_fds;
 *     FD_ZERO(&read_fds);
 *     FD_SET(fd, &read_fds);
 *     
 *     struct timeval tv = {.tv_sec = 1, .tv_usec = 0};
 *     if (select(fd + 1, &read_fds, NULL, NULL, &tv) > 0) {
 *         norn_tick(client);
 *     }
 * }
 * @endcode
 */
int norn_get_fd(const norn_client_t *client);
/* === Session Queries === */

/**
 * @brief Get session state
 *
 * @param session Session handle
 * @return Session state, or NORN_SESSION_CLOSED if session is NULL
 */
norn_session_state_t norn_session_get_state(const norn_session_t *session);
/**
 * @brief Get verified peer public key
 *
 * @param session Session handle (must be ESTABLISHED)
 * @param pubkey Output buffer (suite->pubkey_len bytes)
 * @return 0 on success, -1 on error
 */
int norn_session_get_peer(const norn_session_t *session, unsigned char *pubkey);
/* === Stream Multiplexing (FEAT-018) === */

/**
 * @brief Open a logical stream (async)
 *
 * Creates a new reliable, ordered byte stream over the session.
 * The stream callback receives NORN_STREAM_READY when the stream
 * is ready for I/O.
 *
 * @param session Session handle (must be ESTABLISHED)
 * @param callback Stream event callback
 * @param user_data User data
 * @return Stream handle on success, NULL on error
 *
 * @note Multiple streams can be opened over a single session
 * @note Streams are full-duplex and independent
 */
norn_stream_t *norn_stream_open_async(norn_session_t *session,
                                      norn_stream_callback_t callback,
                                      void *user_data);
/**
 * @brief Register a handler for inbound (peer-initiated) streams (FEAT-018).
 *
 * On an established session, when the peer opens a logical stream, `cb` is
 * invoked from norn_tick() with a stream handle ready for I/O — the server side
 * of a stream tunnel.
 *
 * @param session Session handle
 * @param cb Callback invoked per inbound stream (NULL to clear)
 * @param user_data User data passed to the callback
 * @return 0 on success, -1 if session is NULL
 */
int norn_session_set_accept_stream(norn_session_t *session,
                                   void (*cb)(norn_stream_t *stream, void *user_data),
                                   void *user_data);
/**
 * @brief Write data to stream
 *
 * @param stream Stream handle
 * @param data Data to write
 * @param len Data length
 * @return Bytes written, or -1 on error
 */
int norn_stream_write(norn_stream_t *stream,
                      const unsigned char *data,
                      size_t len);
/**
 * @brief Read data from stream
 *
 * @param stream Stream handle
 * @param buf Buffer to read into
 * @param cap Buffer capacity
 * @return Bytes read, or -1 on error
 */
int norn_stream_read(norn_stream_t *stream,
                     unsigned char *buf,
                     size_t cap);
/**
 * @brief Get readable bytes available
 *
 * @param stream Stream handle
 * @return Bytes available to read
 */
size_t norn_stream_readable(const norn_stream_t *stream);
/**
 * @brief Close stream gracefully
 *
 * Sends FIN to peer, allowing them to finish reading.
 *
 * @param stream Stream handle
 * @return 0 on success, -1 on error
 */
int norn_stream_close(norn_stream_t *stream);
/**
 * @brief Check if peer has closed their side
 *
 * @param stream Stream handle
 * @return 1 if peer sent FIN, 0 otherwise
 */
int norn_stream_peer_closed(const norn_stream_t *stream);